--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 logs
 *.log
 npm-debug.log*
+*.swp
 
 # Runtime data
 pids
@@ -22,7 +23,6 @@ grunt
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-#apps
 .tmp
 
 # Dependency directory
